# hyper-field-networks

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  LICENSE  LICENSE.txt  README.md  aws_install_deps.sh  build_deps.sh  docker-compose.yaml  docker_build.sh  docker_run.sh  flake.nix  generate_many.py  instant_nerf.py  notes.txt  pyrightconfig.json  render_file.py  requirements.txt  run_blender.py  setup.sh  test_bitfield.py  test_fp.py  test_fp.sh  useful_commands.md
.devcontainer/: devcontainer-docker-compose.yaml  devcontainer.json  docker-compose.yml
ablation/: train.py
configs/: camera_intrinsics.json  colored_monsters_ngp_image.json  colored_monsters_ngp_image_alt.json  colored_primitives_ngp_image_32x32.json  conditional_image_dit.json  if_dit.json  if_dit_multi_gpu.json  if_dit_multi_gpu_v100.json  if_dit_remat.json  image_dit.json  image_field.json  image_field_ladit.json  ngp_image.json  ngp_image_cifar10.json  ngp_image_robot_benchmark.json  ngp_nerf.json  overfit_image_field_ladit.json  split_field_conv_ae_hash.json  split_field_conv_ae_mlp.json  stable_diffusion_1.4_unet.json  stable_diffusion_2_unet.json  stable_diffusion_2_vae.json  vanilla_diffusion.json  vanilla_diffusion_128.json  vanilla_diffusion_128_bf16.json  vanilla_diffusion_128_bf16_large.json  vanilla_diffusion_64.json  vanilla_diffusion_64_bf16.json  vanilla_diffusion_64_fp32.json  vanilla_diffusion_bf16_param_test.json
dependencies/: default.nix
dependencies/fp-conversion/: CMakeLists.txt  default.nix  setup.py
dependencies/fp-conversion/csrc/: common.h  ffi.cpp  kernel.cu
dependencies/fp-conversion/pysrc/fp_conversion/: __init__.py  lowering_helper.py
dependencies/jax-tcnn/: CMakeLists.txt  LICENSE  default.nix  pyproject.toml  setup.py
dependencies/jax-tcnn/lib/: ffi.cc
dependencies/jax-tcnn/lib/impl/: hashgrid.cu
dependencies/jax-tcnn/src/jaxtcnn/hashgrid_tcnn/: impl.py
dependencies/ngp-volume-rendering/: CMakeLists.txt  default.nix  setup.py
dependencies/ngp-volume-rendering/csrc/: ffi.cc  ffi.cpp  integrating.cu  marching.cu  packbits.cu  volrend.h
dependencies/ngp-volume-rendering/pysrc/ngp_volume_rendering/: __init__.py
dependencies/ngp-volume-rendering/pysrc/ngp_volume_rendering/integrating/: impl.py
dependencies/ngp-volume-rendering/pysrc/ngp_volume_rendering/marching/: __init__.py
dependencies/ngp-volume-rendering/pysrc/ngp_volume_rendering/morton3d/: impl.py  lowering.py
deployment/: docker-compose.yaml
diffusion/: vanilla_diffusion.py
fields/: __init__.py  image_field.py  instant_nerf.py  ngp_image.py  ngp_nerf.py  ngp_nerf_cuda.py  temp.py  tiny_nerf.py  vanilla_nerf.py  volrendjax_temp.py
gans/: basic_gan.py  gigagan.py
gigagan/: basic_gan.py  make_video.sh
hypernets/: ar_bitfield_gen.py  ar_hypernet.py  ar_hypernet_byte_pair.py  better_conv_ae.py  conditional_image_dit.py  conv_ae.py  conv_vae.py  even_better_conv_ae.py  hash_table_autoencoder.py  hyper_diffusion.py  if_dit.py  if_dit_8gpu.py  if_dit_ablate.py  if_dit_multi_gpu.py  if_dit_remat.py  image_dit_ablate.py  image_field_ladit.py  image_field_vae.py  ladit_image_test.py  linear_transformer.py  linear_transformer_ddim.py  long_hyper_diffusion.py  long_vae.py  lstm_hypernet.py  mlp_mixer_diffusion.py  ngp_hyper_diffusion.py  overfit_image_field_ladit.py  sliding_ltd.py  sparse_transformer.py  split_field_conv_ae.py  split_latent_diffusion.py  tokenized_field_vae.py  transformer_lm.py  transformer_vae.py  vae.py
jaxngp_rep/: cuda.py  encoders.py  min_train.py  nerfs.py  requirements.txt
nerf_helper/: __init__.py
notebooks/: density_grid_visualization.ipynb
prototyping/: att.py  context_squashing.py  cycle.py  dali.py  filters_einsum1.py  filters_einsum2.py  linear_attention_sketch.py  matrix_test.py  mhla.py  normal_sampling.py  patch.py  webdataset_test.py
scripts/: archive_subdirs.py  chunk_dataset.py  ddim.py  dense_ddim.py  extract_preview_samples.py  fix_nerf_dicts.py  fix_pq_metadata.py  generate_chubby.py  generate_image_fields.py  generate_ngp_images.py  generate_ngp_nerfs.py  generate_ray_march_samples.py  if_scatter_plot.py  if_tsne.py  image_to_numpy.py  instant_nerf.py  load_test.py  make_different_sizes.py  make_png_fields.py  masked_sample_prototype.py  min_max_scatter_plot.py  mnist_npy_to_pq.py  pack_ngp_nerf_params.py  pack_ngp_nerf_weights.py  pack_test.py  ray_sample_prototype.py  ray_sample_prototype_visualization.py  read_ingp.py  rename_subdirs.py  render_if_from_pq.py  reshape_ae_output.py  resize_images.py  synthesize_data.py  tiny_nerf.py  tokenize_field_params.py  train_field.py  (+12 more)
submodules/opengl-proc-gen/: .gitignore  CMakeLists.txt  Makefile  default.nix  flake.nix  setup.py  shaders_to_header.sh
submodules/opengl-proc-gen/csrc/: ffi.cpp  file_io.c  file_io.h  main.c  rendering.c  rendering.h  vector_matrix_math.c  vector_matrix_math.h
submodules/opengl-proc-gen/csrc/shaders/: depth_map.vert  shader.frag  shader.vert
submodules/opengl-proc-gen/pysrc/opengl_proc_gen/: __init__.py
submodules/opengl-proc-gen/src/: main.c  rendering.h  vector_matrix_math.c
xla_experimental/: .gitignore  CMakeLists.txt  README.md  execute_hlo.cpp  hlo_comp.txt  hlo_comp_proto.txt  hlo_comp_text.txt  jax_to_hlo.py  prebuilt_xla.txt  setup_log.txt
(+200 files in other folders)
